<resources>
    <string name="app_name">Texted_App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="texted">TEXTED</string>
    <string name="button_log_in">Button</string>
    <string name="sign_up_now">SIGN UP NOW</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="simplified_messaging">simplified messaging</string>
    <string name="logo">logo</string>
    <string name="texted_text">texted_text</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_pic">user_pic</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="password_conf">Password</string>
    <string name="acc_phone_number">Phone Number</string>
    <string name="acc_password_conf">Password</string>
    <string name="contact">CONTACT</string>
</resources>