<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0D0D0D"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp">

            <ImageView
                android:id="@+id/texted_logo"
                android:layout_width="193dp"
                android:layout_height="197dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="95dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/texted_bubble" />

            <TextView
                android:id="@+id/texted_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/texted_logo"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/texted"
                android:textColor="#EBEDF2"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/texted_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/texted_tittle"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/texted_text"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/simplified_messaging"
                android:textColor="#EBEDF2"
                android:textSize="19sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_phone_login"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/texted_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_input"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/texted_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/texted_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="230dp"
                android:backgroundTint="#5852F2"
                android:text="@string/button_log_in"
                android:textColor="#EBEDF2" />

            <TextView
                android:id="@+id/account_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_log_in"
                android:layout_alignStart="@id/pass_input"
                android:layout_marginTop="30dp"
                android:text="Already have a account?"
                android:textColor="#EBEDF2"
                android:textSize="16sp" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_log_in"
                android:layout_alignEnd="@id/pass_input"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/sign_up_now"
                android:textColor="#6F6BF2"
                android:textSize="14sp"
                android:background="@android:color/transparent"/>

            <ImageView
                android:id="@+id/user_pic"
                android:layout_width="34dp"
                android:layout_height="20dp"
                android:layout_below="@id/texted_text"
                android:layout_marginTop="60dp"
                android:layout_alignRight="@id/input_phone_login"
                android:layout_marginRight="300dp"
                android:contentDescription="@string/user_pic"
                app:srcCompat="@drawable/contact" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="34dp"
                android:layout_height="20dp"
                android:layout_below="@id/texted_text"
                android:layout_marginTop="141dp"
                android:layout_alignRight="@id/pass_input"
                android:layout_marginRight="300dp"
                android:contentDescription="@string/user_pic"
                app:srcCompat="@drawable/lock" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>